--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@ a {
     align-items: center;
     gap: 40px;
     background-color: var(--background-color);
+    padding: 0 40px;
+    justify-content: center;
+    position: relative;
 }
 
 .navbar_menu {
@@ -42,3 +45,48 @@ a {
     color: #000;
     border-radius: 5px;
 }
+
+.navbar_bars {
+    display: none;
+    color: white;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    /**/
+    position: absolute;
+    right: 8px;
+    top: 15px;
+}
+
+@media screen and (max-width: 833px) {
+    .navbar_menu {
+        display: none;
+        flex-direction: column;
+        font-size: 28px;
+        align-items: flex-start;    
+    }
+    .navbar_bars {
+        display: block;
+    }
+    .navbar {
+        justify-content: space-between;
+        /*space-between = 양 끝에 배치*/
+        padding-left: 10px;
+        padding-right: 50px;
+    }
+    
+}
+
+.navbar_menu.active {
+    display: flex;
+    padding-top: 50px;
+}
+
+.navbar_links.hide, 
+.navbar_logo.hide {
+    display: none;
+}
+
+
+
+
